test/Fail/WrongTypeOfMain.agda
-- Andreas, 2024-07-22
-- Trigger error GHCBackend.WrongTypeOfMain

open import Agda.Builtin.Nat
open import Agda.Builtin.IO

main : Nat
main = 42
